[gd_scene load_steps=3 format=2]

[ext_resource path="res://Combat/Elements/ActorPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Combat/Elements/ActorsController.gd" type="Script" id=2]

[node name="ActorsController" type="Control"]
anchor_right = 0.4
anchor_bottom = 0.583333
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ActorLeft" parent="." instance=ExtResource( 1 )]
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_top = -100.0
margin_right = 150.0
margin_bottom = 100.0

[node name="ActorRight" parent="." instance=ExtResource( 1 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -100.0
margin_bottom = 100.0

[node name="ActorTop" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -75.0
margin_right = 75.0
margin_bottom = 200.0

[node name="ActorBottom" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -75.0
margin_top = -200.0
margin_right = 75.0
margin_bottom = 0.0
